Prevent the main content from overflowing, requiring horizontal scrolling

--- a/_sass/main-content.scss
+++ b/_sass/main-content.scss
@@ -12,6 +12,7 @@ html {
             }
             section.main-content {
                 flex: 1;
+                overflow: hidden;
                 h1, h2, h3, h4, h5, h6 {
                     color: $medium-blue;
                 }
